# torque

./: .gitignore  BACKEND_DATABASE_MANAGEMENT_PLAN.md  CLAUDE.md  Cargo.toml  DESIGN-MODEL-EDITOR.md  DESIGN.md  IMPLEMENTATION-PHASE3A.md  IMPLEMENTATION.md  INTEGRATION_DEMO.md  MEM.md  NEXT.md  PATH_FIXES.md  PHASE3A-IMPLEMENTATION-PLAN.md  README.md  RELEASE.md  START_LAYOUT_IMPLEMENTATION.md  TODO.md  VIS-EDITOR.md  create_projects.json  debug_torque_connection.py  import.json  package-lock.json  test-config.toml  test-import.json  test-model.json  test-playwright.js  test-torqueapp-fixed.js  test-torqueapp.js  torque.toml
.github/workflows/: README.md  manual-build.yml  test-build.yml
docs/: TAURI-APP-SPEC.md  data-transformation-implementation.md
docs/plans/: 2025-08-06-tauri-implementation-plan.md  2025-08-09-interactive-console-component.md
docs/reviews/: 2025-07-12-data-transformations.md  2025-07-19-comprehensive-codebase-review.md  2025-07-23-torque-client-design-review.md  2025-08-15-data-entry-integration-critique.md  2025-08-15-tauri-app-specification-review.md  2025-08-21-torque-state-transition-system-review.md
frontend/model-editor/: GRAPHQL_TEST_REPORT.md  LAYOUT_SAVE_TEST_REPORT.md  NAVIGATION_TEST_REPORT.md  README-storybook.md  URL_ROUTING_TEST_REPORT.md  final-breadcrumb-test.js  index.html  layout-persistence-test.md  package-lock.json  package.json  playwright.config.ts  test-direct-url-navigation.js  test-entity-conversion.js  test-layout-editor.js  test-layout-features-v2.js  test-layout-features.js  test-layout-save.html  test-model-not-found-fix.js  test-report.md  test-visual-layout-editor.js  tsconfig.json  vite.config.ts
frontend/model-editor/.storybook/: main.ts  preview.ts
frontend/model-editor/src/: App.tsx  main.tsx  test-plugin-registry.ts  theme.ts
frontend/model-editor/storybook-static/: iframe.html  index.html  index.json  project.json
frontend/model-editor/test-results/: .last-run.json
frontend/model-editor/tests/: check-entities.spec.ts  datagrid-configuration.spec.ts  debug-buttons.spec.ts  final-navigation-verification.spec.ts  form-configuration.spec.ts  graphql-integration.spec.ts  layout-editor-console-logs.spec.ts  layout-editor-direct.spec.ts  layout-editor-url-test.spec.ts  layout-editor.spec.ts  layout-name-editing-direct.spec.ts  layout-name-editing-focused.spec.ts  layout-name-editing-simple.spec.ts  layout-name-editing.spec.ts  model-editor.spec.ts  navigation-overview.spec.ts  simple-edit-test.spec.ts  simple-navigation-test.spec.ts  test-add-entity.spec.ts  test-direct-click.spec.ts  test-edit-debug.spec.ts  test-entity-edit.spec.ts  test-entity-update-error.spec.ts  test-update-entity.spec.ts  verify-fixed-urls.spec.ts
frontend/tauri/: index.html  package-lock.json  package.json  vite.config.ts
frontend/tauri/src/: App.tsx  (+1 more)
frontend/torque-client/: PERFORMANCE.md  PERFORMANCE_FIXES.md  TESTING.md  example.html  package-lock.json  package.json  tsconfig.lib.json  vite.config.ts  vitest.config.ts
sample/: README.md
sample/models/: customer-order.json  todo-app.json
sample/schemas/: torque-model.schema.json
scripts/: build-release.sh  dev-tauri.sh  dev.sh  test-dev.sh  test-frontend-only.js  test-frontend.js  verify-portability.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs  storage.rs
torque/: Cargo.toml
torque/src/: config.rs  error.rs  lib.rs  main.rs
torque/src/common/: datetime.rs  mod.rs  uuid.rs
torque/src/console/: commands.rs  completion.rs  mod.rs  parser.rs
torque/src/database/: entities.rs  migrations.rs  mod.rs
torque/src/database/entities/: app_entities.rs  mod.rs  torque_models.rs
torque/src/database/migrations/: m20240101_000002_create_app_entities.rs
torque/src/entity/: cache.rs  mod.rs  service.rs  types.rs
torque/src/jsonrpc/: direct_mapping.rs  handlers.rs  mod.rs
torque/src/model/: events.rs  mod.rs  remediation.rs  remediation_executor.rs  service.rs  types.rs  validation.rs
torque/src/server/: http.rs  jsonrpc.rs  mcp.rs  middleware.rs  mod.rs  routes.rs
torque/src/server/graphql/: mod.rs  schema.rs  zero_copy.rs
torque/src/server/handlers/: app_database.rs  entity.rs  frontend.rs  graphql.rs  health.rs  jsonrpc.rs  mod.rs  websocket.rs
torque/src/services/: app_database.rs  broadcast.rs  cache.rs  entity.rs  fake_data.rs  metrics.rs  mod.rs  model.rs
torque/src/xflow/: engine.rs  javascript.rs  mod.rs  types.rs
torque/tests/: integration_test.rs
(+180 files in other folders)
