[workspace]
members = [
    "torque",
    # Future crates will be added here:
    # "model-editor-frontend",
    # "torque-app-frontend",
    # "torque-components",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true