[package]
name = "torque-desktop"
version = "0.1.0"
description = "Torque Desktop Application"
authors = ["Torque Team"]
license = "MIT"
repository = "https://github.com/michiel/torque"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "torque_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
# Tauri dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"

# Cross-platform directory management
directories = "5.0"

# Async runtime and server
tokio = { workspace = true }

# Main Torque library
torque = { path = "../torque" }
